syntax = "proto3";
option java_multiple_files = true;

message Empty{}

message ProductDTO{
  int32 id = 1;
}

message AnimalDTO{
  int32 id = 1;
  int32 weight = 2;
}

message GetAnimalsInProductRequest{
  int32 productId = 1;
}

message GetAnimalsInProductResponse{
  repeated AnimalDTO animals = 1;
}

message GetProductsFromAnimalRequest{
  int32 animalId = 1;
}

message GetProductsFromAnimalResponse{
  repeated ProductDTO products = 1;
}

service AnimalService{
  rpc GetAnimalsInProduct(GetAnimalsInProductRequest) returns (GetAnimalsInProductResponse);
  rpc GetProductsFromAnimal(GetProductsFromAnimalRequest) returns (GetProductsFromAnimalResponse);

  rpc RegisterAnimal(AnimalDTO) returns (Empty);
}